[gd_scene load_steps=2 format=2]

[ext_resource path="res://goap/goals/g_go_shopping.gd" type="Script" id=1]

[node name="g_go_shopping" type="Node" index="0"]

script = ExtResource( 1 )

[node name="shoppingcountdown_timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="shoppingcountdown_timer" to="." method="_on_shoppingcountdown_timer_timeout"]


